@@ -18,6 +18,7 @@
 package net.frozenblock.wilderwild.entity.ai.penguin;
 
 import java.util.Map;
+import com.google.common.collect.ImmutableMap;
 import net.frozenblock.wilderwild.entity.Penguin;
 import net.frozenblock.wilderwild.registry.WWMemoryModuleTypes;
 import net.minecraft.server.level.ServerLevel;
@@ -29,12 +30,7 @@ import org.jetbrains.annotations.NotNull;
 public class PenguinPreSearch<E extends Penguin> extends Behavior<E> {
 
 	public PenguinPreSearch() {
-		super(
-			Map.of(
-				WWMemoryModuleTypes.STARTING_SEARCH, MemoryStatus.REGISTERED
-			),
-			1
-		);
+		super(ImmutableMap.of(WWMemoryModuleTypes.STARTING_SEARCH, MemoryStatus.REGISTERED), 1);
 	}
 
 	@Override
